--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,13 @@
 common: &common
   adapter: postgresql
-  host: localhost
-  port: <%= ENV["BOXEN_POSTGRESQL_PORT"] || 5432 %>
-  pool: 5
   encoding: unicode
+  username: docker
+  password: docker
+  template: template0
+  pool: 5
   timeout: 5000
+  host: <%= ENV.fetch('DB_1_PORT_5432_TCP_ADDR', 'localhost') %>
+  port: <%= ENV.fetch('DB_1_PORT_5432_TCP_PORT', '5432') %>
 
 development:
   <<: *common
