Add travis database config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: ruby
 rvm:
 - 2.1.2
+addons:
+  postgresql: "9.3"
+before_script:
+  - cp config/database.yml.travis config/database.yml
+  - psql -c 'create database travis_ci_test;' -U postgres
 script: bundle exec rspec spec
 env:
   global:
