Run rake with binstubs

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
 before_script:
   - cp config/database.yml.travis config/database.yml
   - psql -c 'create database travis_ci_test;' -U postgres
-  - rake db:schema:load db:migrate RAILS_ENV=test
+  - bin/rake db:schema:load db:migrate RAILS_ENV=test
 script: bundle exec rspec spec
 env:
   global:
