Update Setup Information
* Add `bin/setup` to get people up and running fast
* Update `README.md` with install script instructions

Minor:
* Update gemfile.lock
* Add secret keys and instructions to get AWS stuff

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-export DEVISE_SECRET_KEY=''
-export SECRET_KEY_BASE=''
+export DEVISE_SECRET_KEY='heychangeme'
+export SECRET_KEY_BASE='heychangeme'
 export CARRIERWAVE_PROVIDER='AWS'
+
+# Get these from Faun
 export CARRIERWAVE_AWS_ACCESS_KEY_ID=''
 export CARRIERWAVE_AWS_SECRET_ACCESS_KEY=''
+
 export CARRIERWAVE_REGION='us-west-1'
 export CARRIERWAVE_ENDPOINT='https://s3-us-west-1.amazonaws.com/'
 export CARRIERWAVE_HOST='https://s3.amazonaws.com'
