--- a/.hound.yml
+++ b/.hound.yml
@@ -1,6 +1,12 @@
 ruby:
   enabled: true
+  config_file: .rubocop.yml
 coffee_script:
   enabled: true
+  config_file: .coffeelint.json
 java_script:
   enabled: true
+  config_file: .jshint.json
+scss:
+  enabled: true
+  config_file: .scss.yml
