Diff changes after build

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_script:
 script: bundle exec rspec spec
 after_script:
 - bundle_cache
+- git diff
 env:
   global:
   - BUNDLE_ARCHIVE='zinedistro-ci-bundle'
