Add Unicorn port

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ export CARRIERWAVE_ENDPOINT='https://s3-us-west-1.amazonaws.com/'
 export CARRIERWAVE_HOST='https://s3.amazonaws.com'
 export CARRIERWAVE_ASSET_HOST='http://assets.myzinedistro.org'
 export CARRIERWAVE_DIRECTORY='zinedistro'
+
+# Unicorn port number
+PORT=3000
