Clean up example .env

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,22 @@
-export DEVISE_SECRET_KEY='heychangeme'
-export SECRET_KEY_BASE='heychangeme'
-export CARRIERWAVE_PROVIDER='AWS'
+APP_NAME='My Zine Distro'
+DEVISE_SECRET_KEY='heychangeme'
+SECRET_KEY_BASE='heychangeme'
+CARRIERWAVE_PROVIDER='AWS'
 
 # Get these from Faun
-export CARRIERWAVE_AWS_ACCESS_KEY_ID=''
-export CARRIERWAVE_AWS_SECRET_ACCESS_KEY=''
+CARRIERWAVE_AWS_ACCESS_KEY_ID=''
+CARRIERWAVE_AWS_SECRET_ACCESS_KEY=''
+CARRIERWAVE_REGION='us-west-1'
+CARRIERWAVE_ENDPOINT='https://s3-us-west-1.amazonaws.com/'
+CARRIERWAVE_HOST='https://s3.amazonaws.com'
+CARRIERWAVE_ASSET_HOST='http://assets.myzinedistro.org'
+CARRIERWAVE_DIRECTORY='zinedistro'
 
-export CARRIERWAVE_REGION='us-west-1'
-export CARRIERWAVE_ENDPOINT='https://s3-us-west-1.amazonaws.com/'
-export CARRIERWAVE_HOST='https://s3.amazonaws.com'
-export CARRIERWAVE_ASSET_HOST='http://assets.myzinedistro.org'
-export CARRIERWAVE_DIRECTORY='zinedistro'
+
+# Optional skylight settings
+# Go to http://skylight.io to sign up
+SKYLIGHT_APPLICATION=''
+SKYLIGHT_AUTHENTICTION=''
 
 # Unicorn port number
 PORT=3000
