--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,9 @@ CARRIERWAVE_DIRECTORY='zinedistro'
 SKYLIGHT_APPLICATION=''
 SKYLIGHT_AUTHENTICTION=''
 
+# Cloudinary settings
+# Go to https://cloudinary.com to sign up
+CLOUDINARY_URL=''
+
 # Unicorn port number
 PORT=3000
