Change default devise email address

--- a/.env.example
+++ b/.env.example
@@ -19,4 +19,4 @@ SKYLIGHT_AUTHENTICTION=''
 
 # Unicorn port number
 PORT=3000
-MAIL_HOST='heychangeme.zinedistro.org'
+EMAIL_HOST='heychangeme.zinedistro.org'
