--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 - gem install nokogiri -- --use-system-libraries
 - gem install bundler aws-sdk:1.60.2 bundle_cache
 - bundle_cache_install
-bundler_args: "--without development --path=~/.bundle"
+bundler_args: "--without development production --path=~/.bundle"
 before_script:
 - cp config/database.yml.travis config/database.yml
 - psql -c 'create database travis_ci_test;' -U postgres
