Add New Relic gem

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,10 @@ CARRIERWAVE_DIRECTORY='zinedistro'
 SKYLIGHT_APPLICATION=''
 SKYLIGHT_AUTHENTICTION=''
 
+# New Relic settings
+# These can be gotten from heroku
+NEW_RELIC_LICENSE_KEY=''
+
 # Unicorn port number
 PORT=3000
 MAIL_HOST='heychangeme.zinedistro.org'
