--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,20 @@
 AllCops:
   Include:
-    - '**/Rakefile'
-    - '**/config.ru'
+  - "**/*.gemspec"
+  - "**/*.podspec"
+  - "**/*.jbuilder"
+  - "**/*.rake"
+  - "**/*.opal"
+  - "**/Gemfile"
+  - "**/Rakefile"
+  - "**/Capfile"
+  - "**/Guardfile"
+  - "**/Podfile"
+  - "**/Thorfile"
+  - "**/Vagrantfile"
+  - "**/Berksfile"
+  - "**/Cheffile"
+  - "**/Vagabondfile"
   Exclude:
     - 'db/**/*'
     - 'bin/**/*'
