--- a/app.json
+++ b/app.json
@@ -9,7 +9,8 @@
   "success_url": "/admin/login",
   "addons": [
     "heroku-postgresql:hobby-dev",
-    "pgbackups:plus"
+    "pgbackups:plus",
+    "heroku-redis:hobby-dev --timeout 60 --maxmemory volatile-lru"
   ],
   "env": {
     "DEVISE_SECRET_KEY": {
