--- a/.travis.yml
+++ b/.travis.yml
@@ -37,3 +37,6 @@ env:
   - secure: nKW+WRSiH6bdYd6by1iHSeE7ULMjC1PmJ5RsfhzHvMiXDdk0l1cDH0h88Wl+IOfFdkCVxOhG8L4LPON+PrfDDeCJrhCeoFbVly+H1WPgHuR8q771mfeIaoE6GLc/ZB5pGa3KSke2AmzPvK7Ro0mymNt3+5ftRlKIzKMV8NpxNx0=
   - secure: L1sDUYRKlcP2osXx6RI6IDT19nvZPILwy/Z8zz688eswncFutOSyCTVnNQGUreAiA+IiGoW6tOXhadutP7nJBZ7/R3QvXNKuXs4kId6M8YmYF/JiCWv6hgIvq6cgB7Xvo2hFWLYLF2cxzXSaNDltEc1d15eKpzDYtnw7sWk74HQ=
   - secure: B8e61/4JQlUrEixUdNxI0QtClUeVG0ee+WORkyl9G2LFZmEGgxR7dGn2OFByCbEBD6YMCvcFyxMAI4Ao3qqeGbMQZGC+zjvwSvLJqUNi2BLyRT26iID7jqWCWNItMkvAM5/tjzOlGnhxSxYPiQqQkZdCc9o+495fipq2oR3l47o=
+notifications:
+  slack:
+    secure: hpK8Jds5/aECaVHSycI9qvmpbfa1miGPA70xvJmzdOY3VYeZXazu8NkJhzBDp4Rt4hvKvFLrDhgvl+jVFv/4eDS0ysdeY1piV2W1uoUr4Y/CT1k+xTsQPoUNFizjvCfIIjDPCwRyau/OkBa8E0h3SCW3YFjtM56D95WO07FV2KU=
