--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 - cp config/database.yml.travis config/database.yml
 - psql -c 'create database travis_ci_test;' -U postgres
 - psql -U postgres -q -d travis_ci_test -f db/structure.sql
-script: bundle exec rspec spec
+script: rake
 after_script:
 - bundle_cache
 env:
