--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,16 @@ before_script:
 - cp config/database.yml.travis config/database.yml
 - psql -c 'create database travis_ci_test;' -U postgres
 - psql -U postgres -q -d travis_ci_test -f db/structure.sql
-script: bundle exec rspec && bundle exec codeclimate-test-reporter
+- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+- chmod +x ./cc-test-reporter
+script:
+  - bundle exec rspec
+  - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
 after_script:
 - bundle_cache
 env:
   global:
+  - GIT_COMMITTED_AT=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then git log -1 --pretty=format:%ct; else git log -1 --skip 1 --pretty=format:%ct; fi)
   - BUNDLE_ARCHIVE='zinedistro-ci-bundle'
   - RAILS_ENV=test
   - CARRIERWAVE_PROVIDER='AWS'
@@ -37,6 +42,7 @@ env:
   - secure: nKW+WRSiH6bdYd6by1iHSeE7ULMjC1PmJ5RsfhzHvMiXDdk0l1cDH0h88Wl+IOfFdkCVxOhG8L4LPON+PrfDDeCJrhCeoFbVly+H1WPgHuR8q771mfeIaoE6GLc/ZB5pGa3KSke2AmzPvK7Ro0mymNt3+5ftRlKIzKMV8NpxNx0=
   - secure: L1sDUYRKlcP2osXx6RI6IDT19nvZPILwy/Z8zz688eswncFutOSyCTVnNQGUreAiA+IiGoW6tOXhadutP7nJBZ7/R3QvXNKuXs4kId6M8YmYF/JiCWv6hgIvq6cgB7Xvo2hFWLYLF2cxzXSaNDltEc1d15eKpzDYtnw7sWk74HQ=
   - secure: B8e61/4JQlUrEixUdNxI0QtClUeVG0ee+WORkyl9G2LFZmEGgxR7dGn2OFByCbEBD6YMCvcFyxMAI4Ao3qqeGbMQZGC+zjvwSvLJqUNi2BLyRT26iID7jqWCWNItMkvAM5/tjzOlGnhxSxYPiQqQkZdCc9o+495fipq2oR3l47o=
+  - secure: ufRvxpHyuuGSOsW6hgIgKe2msPkXdnX9L0alnl1IUOTKsL9mg9KosjDGCMLeME34vGRY7K1eR6YHNshEnCh0OTXYRW8dlfIbOe6rR26xtynhJRG1Ka/W2PcGt9FPAmPngMWUcuQlUhq81fAeCGgobqOlVIEBfSKHO5C0oydNPec=
 notifications:
   slack:
     secure: hpK8Jds5/aECaVHSycI9qvmpbfa1miGPA70xvJmzdOY3VYeZXazu8NkJhzBDp4Rt4hvKvFLrDhgvl+jVFv/4eDS0ysdeY1piV2W1uoUr4Y/CT1k+xTsQPoUNFizjvCfIIjDPCwRyau/OkBa8E0h3SCW3YFjtM56D95WO07FV2KU=
