--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 common: &common
   adapter: <%= ENV.fetch('RAILS_DB_ADAPTER', 'mysql2') %>
-  encoding: <%= ENV.fetch('RAILS_DB_ENCODING', 'utf8mb3') %>
+  encoding: <%= ENV.fetch('RAILS_DB_ENCODING', 'utf8') %>
   timeout: <%= ENV.fetch('RAILS_DB_TIMEOUT_MS', 5000) %>.to_i
   pool: <%= ENV["DB_POOL"] || ENV['MAX_THREADS'] || 5 %>
   host: <%= ENV.fetch('RAILS_DB_HOST', 'localhost') %>
