--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ config/skylight.yml
 
 # Ignore rspec directory
 /rspec
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
