--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@rails/webpacker": "^5.4.3",
+    "@rails/webpacker": "5.4.4",
+    "rails-erb-loader": "^5.5.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
