Fix stylesheet paths

--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "select2": "^4.1.0-rc.0"
   },
   "scripts": {
-    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "sass ./app/assets/stylesheets/application.css.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
